<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:background="@drawable/fondoregistro">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/crushed"
        android:text="Registro"
        android:textColor="#E1306C"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logoinsta" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logofont" />
    </LinearLayout>

    <EditText
        android:id="@+id/nomUser"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom2"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/nomUserRegistro"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/email"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom2"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nomUser"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/password"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom2"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/passwordRegistro"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomUser" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom2"
        android:drawableLeft="@drawable/ic_date"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/date"
        android:inputType="date"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom2"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:fontFamily="@font/acme"
        android:hint="@string/phone"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="205dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="Sexo:  "
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom2"
                android:fontFamily="@font/acme"
                android:text="@string/rb1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom2"
                android:fontFamily="@font/acme"
                android:text="@string/rb2"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.054">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/acme"
            android:text="After all this time?"
            android:textColor="#000000"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom2"
            android:fontFamily="@font/acme"
            android:padding="12dp"
            android:text="@string/hp"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="293dp"
        android:layout_height="61dp"
        android:background="@drawable/custom2"
        android:fontFamily="@font/crushed"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom2"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/edad"
        android:inputType="number"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/Date"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="263dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/acme"
            android:text="¿Eres de Batiz?"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Si" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

</androidx.constraintlayout.widget.ConstraintLayout>

