<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="112dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logoinsta" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logofont" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/crushed"
        android:text="Bienvenido"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/nomUserLogin"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/nomUser"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/passwordL"
        android:layout_width="258dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomUserLogin" />

    <Button
        android:id="@+id/buttonR"
        android:layout_width="145dp"
        android:layout_height="75dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom"
        android:fontFamily="@font/acme"
        android:onClick="buttonR"
        android:text="@string/registro"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonL"
        app:layout_constraintTop_toBottomOf="@+id/passwordL" />

    <Button
        android:id="@+id/buttonL"
        android:layout_width="145dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom"
        android:fontFamily="@font/acme"
        android:onClick="Registrar"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordL" />

    <Button
        android:id="@+id/buttonF"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom"
        android:fontFamily="@font/acme"
        android:text="@string/forgot"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonL" />
</androidx.constraintlayout.widget.ConstraintLayout>